--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
     <title>Портфолио Юлии Карпец</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+background: url('images/plastic-texture.jpg') no-repeat center;
 </head>
 <body>
     <header class="hero">
