--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body {
     font-family: 'Inter', sans-serif;
     margin: 0;
-    background-color: #f9f9f9;
+    background-color: #2E2E2E;
     color: #2e2e2e;
 }
 
@@ -19,7 +19,7 @@ body {
     background: url('plastic-texture.jpg') no-repeat center;
     background-size: cover;
     padding: 60px 20px;
-    color: white;
+    color: #c4d2c3;
 }
 
 .photo img {
