--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body {
     font-family: 'Inter', sans-serif;
     margin: 0;
-    background-color: #2E2E2E;
+    background-color: #2e2e2e;
     color: #2e2e2e;
 }
 
