--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,6 @@ h2 {
 footer {
     text-align: center;
     background-color: #2e2e2e;
-    color: white;
+    color: #2e2e2e;
     padding: 20px;
 }
